<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- app -->
    <string name="app_editor_text" translatable="false">ODS Text Editor</string>

    <!-- common -->
    <string name="common_opendrawer">Open navigation</string>
    <string name="common_closedrawer">Close navigation</string>
    <string name="common_invalidvalue">This valuse is not acceptable.</string>
    <string name="common_apply">Apply</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_pleasewait">Please wait…</string>
    <string name="common_error">Something went wrong.</string>
    <string name="common_ok">OK</string>
    <string name="common_delete">Are you sure you want to delete \'%1$s\'?</string>

    <!-- mime types -->
    <string name="mime_audio">Audio</string>
    <string name="mime_archive">Archive</string>
    <string name="mime_binary">Binary Data</string>
    <string name="mime_calendar">Calendar</string>
    <string name="mime_certificate">Certificate</string>
    <string name="mime_contact">Contact</string>
    <string name="mime_data">Data</string>
    <string name="mime_document">Document</string>
    <string name="mime_ebook">eBook</string>
    <string name="mime_email">Email</string>
    <string name="mime_html">HTML</string>
    <string name="mime_image">Image</string>
    <string name="mime_msaccess">Microsoft Access</string>
    <string name="mime_msexcel">Microsoft Excel</string>
    <string name="mime_msnote">Microsoft OneNote</string>
    <string name="mime_msppt">Microsoft PowerPoint</string>
    <string name="mime_msproject">Microsoft Project</string>
    <string name="mime_msvisio">Microsoft Visio</string>
    <string name="mime_msword">Microsoft Word</string>
    <string name="mime_opendocument">OpenDocument</string>
    <string name="mime_package">Package</string>
    <string name="mime_plain">Plain Text</string>
    <string name="mime_playlist">Playlist</string>
    <string name="mime_raw">RAW Image</string>
    <string name="mime_source">Source File</string>
    <string name="mime_video">Video</string>
    <string name="mime_unknown">Unknown</string>

    <!-- navigation -->
    <string name="nav_manage">Manage accounts…</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_noaccount">Account unavailable</string>
    <string name="nav_addaccount">New account…</string>
    <string name="nav_personal">My Folders</string>
    <string name="nav_shared">Shared</string>
    <string name="nav_global">Global</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_config">Configuration</string>
    <string name="nav_localfolder">Local Files</string>
    <string name="nav_norepo">No repositories…</string>

    <!-- status -->
    <string name="status_syncrepo">Synchronizing account %1$s</string>
    <string name="status_syncfolder">Synchronizing folder %1$s</string>
    <string name="status_connect">Connecting to %1$s/%2$s</string>
    <string name="status_openfolder">Opening folder %1$s</string>
    <string name="status_configacc">Configuring %1$s</string>
    <string name="status_synclink">Synchronizing links %1$s</string>

    <!-- about -->
    <string name="about_info" tools:ignore="PluralsCandidate">
<![CDATA[<p>Version: <b>%1$s</b></p>
<p>&copy; 2013-%2$d The Open DataSpace project. <a href="mailto:%3$s>%3$s</a></p>
<p>This software is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a>.</p>
<p>Icons by <a href="https://icons8.com/">Icons8</a>.</p>]]>
    </string>

    <!-- settings -->
    <string name="settings_caption">Settings</string>
    <string name="settings_links">Links</string>
    <string name="settings_web">Open DataSpace</string>
    <string name="settings_web_desc">Visit official Open DataSpace website</string>
    <string name="settings_rating">Write a review</string>
    <string name="settings_rating_desc">Rate Open DataSpace on Google Play</string>
    <string name="settings_back">Back</string>
    <string name="settings_next">Next</string>
    <string name="settings_skip">Skip</string>

    <!-- account list -->
    <string name="accounts_empty">No accounts…</string>
    <string name="accounts_add">Add account</string>
    <string name="accounts_title">Accounts</string>

    <!-- account info -->
    <string name="account_title">Account Authetication</string>
    <string name="account_general">Account Information</string>
    <string name="account_username">Username</string>
    <string name="account_required">Required</string>
    <string name="account_password">Password</string>
    <string name="account_hostname">Hostname</string>
    <string name="account_hostname_hint">www.example.com (Required)</string>
    <string name="account_description">Display name</string>
    <string name="account_optional">Optional</string>
    <string name="account_advanced">Advanced</string>
    <string name="account_usejson">Use Json binding</string>
    <string name="account_delete">Delete</string>

    <!-- folder -->
    <string name="folder_slash">/</string>
    <string name="folder_empty">No files…</string>
    <string name="folder_root">SD Card</string>
    <string name="folder_downloads">Downloads</string>
    <string name="folder_documents">Documents</string>
    <string name="folder_pictures">Images</string>
    <string name="folder_music">Music</string>
    <string name="folder_video">Video</string>
    <string name="folder_createact">Create folder…</string>
    <string name="folder_createdlg">Create a new folder</string>
    <string name="folder_createhint">Type the folder name here…</string>
    <string name="folder_delete">Delete</string>
    <string name="folder_selectall">Select All</string>
    <string name="folder_actions">Additional actions</string>
    <string name="folder_details">Details</string>
    <string name="folder_libraries">Local Files</string>
    <string name="folder_cut">Cut</string>
    <string name="folder_copy">Copy</string>
    <string name="folder_paste">Paste</string>
    <string name="folder_upload">Upload…</string>
    <string name="folder_download">Download…</string>
    <string name="folder_apply">Select</string>
    <string name="folder_pickfile">Select files</string>
    <string name="folder_pickfolder">Select the folder</string>

    <!-- node info -->
    <string name="node_title">Details</string>
    <string name="node_properties">Properties</string>
    <string name="node_name">Name</string>
    <string name="node_path">Path</string>
    <string name="node_creator">Created by</string>
    <string name="node_created">Created</string>
    <string name="node_modified">Modified</string>
    <string name="node_modifier">Modified by</string>
    <string name="node_preview">Preview</string>
    <string name="node_folder">Folder</string>
    <string name="node_unknown">Unknown</string>
    <string name="node_type">Type</string>
    <string name="node_nopreview">Preview is not available.</string>
    <string name="node_loadpreview">Loading preview…</string>
    <string name="node_delete">Delete</string>
    <string name="node_rename">Rename</string>
    <string name="node_renamehint">Type new name here…</string>
    <string name="node_size">Size</string>
    <string name="node_upload">Upload…</string>
    <string name="node_download">Download…</string>
    <string name="node_open">Open…</string>
    <string name="node_links">Links…</string>

    <!-- editors -->
    <string name="editor_save">Save</string>
    <string name="editor_speech">Speech to Text</string>
    <string name="editor_notfound">File not found.</string>
    <string name="editor_toobig">This file exceeds the size limit to be opened with the ODS Text Editor.</string>
    <string name="editor_modified">The file has been modified.</string>
    <string name="editor_quit"><![CDATA[Do you want to quit without saving?<br/>Any unsaved changes will be lost.]]></string>
    <string name="editor_discard">Discard</string>
    <string name="editor_reload">Reload</string>

    <!-- links -->
    <string name="link_upload">Upload links for %1$s</string>
    <string name="link_download">Download links for %1$s</string>
    <string name="link_createact">Create Link…</string>
    <string name="link_delete">Delete</string>
    <string name="link_details">Edit…</string>
    <string name="link_copyurl">Copy Url</string>
    <string name="link_name">Name:</string>
    <string name="link_expires">Expires:</string>
    <string name="link_email">Email:</string>
    <string name="link_password">Password:</string>
    <string name="link_message">Message:</string>

</resources>
