<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:auto="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_folder_delete"
        android:title="@string/folder_delete"
        android:icon="@drawable/ic_remove"
        auto:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_folder_upload"
        android:title="@string/folder_upload"
        android:icon="@drawable/ic_upload"
        auto:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_folder_cut"
        android:title="@string/folder_cut"
        auto:showAsAction="never"/>
    <item
        android:id="@+id/menu_folder_copy"
        android:title="@string/folder_copy"
        auto:showAsAction="never"/>
    <item
        android:id="@+id/menu_folder_selectall"
        android:title="@string/folder_selectall"
        auto:showAsAction="never"/>
</menu>
