<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:auto="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_folder_apply"
        android:icon="@drawable/ic_apply"
        android:title="@string/folder_apply"
        auto:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_folder_create"
        android:icon="@drawable/ic_newfolder"
        android:title="@string/folder_createact"
        auto:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_folder_upload"
        android:icon="@drawable/ic_upload"
        android:title="@string/folder_upload"
        auto:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_folder_paste"
        android:title="@string/folder_paste"
        auto:showAsAction="never"/>
</menu>
