<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:auto="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_node_open"
        android:icon="@drawable/ic_open"
        android:title="@string/node_open"
        auto:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_node_upload"
        android:icon="@drawable/ic_upload"
        android:title="@string/node_upload"
        auto:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_node_rename"
        android:icon="@drawable/ic_rename"
        android:title="@string/node_rename"
        auto:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_node_delete"
        android:icon="@drawable/ic_remove"
        android:title="@string/node_delete"
        auto:showAsAction="ifRoom"/>
</menu>
