<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:auto="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_node_open"
            android:title="@string/node_open"
            android:icon="@drawable/ic_open"
            auto:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/menu_node_download"
            android:title="@string/node_download"
            android:icon="@drawable/ic_download"
            auto:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/menu_node_rename"
            android:title="@string/node_rename"
            android:icon="@drawable/ic_rename"
            auto:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_node_delete"
            android:title="@string/node_delete"
            android:icon="@drawable/ic_remove"
            auto:showAsAction="ifRoom"/>
</menu>
