<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_name"/>

        <EditText
            android:id="@+id/link_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_expires"/>

        <EditText
            android:id="@+id/link_expires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:singleLine="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_email"/>

        <EditText
            android:id="@+id/link_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:inputType="text|textEmailAddress"
            android:singleLine="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_password"/>

        <EditText
            android:id="@+id/link_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:inputType="text|textPassword"
            android:singleLine="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_message"/>

        <EditText
            android:id="@+id/link_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:gravity="top|start"
            android:inputType="text|textMultiLine"
            android:lines="3"
            android:maxLines="3"
            android:minLines="3"
            android:singleLine="false"/>
    </LinearLayout>
</ScrollView>
